--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="username_hint">请输入戏票编号</string>
     <string name="password">密码</string>
     <string name="password_hint">请输入座位号</string>
-    <string name="title_activity_usermain">usermain</string>
+    <string name="title_activity_usermain"> </string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="gotologin">离开梨园</string>
 </resources>
