--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
 
     <string name="action_settings">Settings</string>
     <string name="gotologin">离开梨园</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">看戏区</string>
+    <string name="title_dashboard">演戏区</string>
+    <string name="title_notifications">看戏观众</string>
 
     <!--String names below will be used in activity_register.xml-->
     <string name="register_name_hint">请输入用户名</string>
