--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="register_email_hint">请输入邮箱地址</string>
     <string name="register_password_hint">请输入密码</string>
     <string name="register_button">提交</string>
+    <string name="title_activity_user">user</string>
 </resources>
