--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,8 @@
     <string name="title_activity_user">user</string>
 
     <!--For Broadcast-->
-    <string name="password_invalid_error">你的密码不rarchern(*≧▽≦*)n</string>
-    <string name="username_invalid_error">你的用户名不rarcher(′⌒`)</string>
-    <string name="username_empty_error">你没输rarcher啊。。。</string>
+    <string name="password_invalid_error">你的密码不如rarcher好(*≧▽≦*)n</string>
+    <string name="username_invalid_error">你的用户名不如rarcher好(′⌒`)</string>
+    <string name="username_empty_error">你用户名没输rarcher啊。。。</string>
+    <string name="password_incorrect_error">你密码没输rarcher啊。。。</string>
 </resources>
