--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="username_invalid_error">你的用户名不如rarcher好(′⌒`)</string>
     <string name="username_empty_error">你用户名没输rarcher啊。。。</string>
     <string name="password_incorrect_error">你密码没输rarcher啊。。。</string>
+    <string name="username_existed_error">你的用户名rarcher注册过了：）</string>
 </resources>
