--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
     <string name="title_activity_user">user</string>
 
     <!--For Broadcast-->
-    <string name="password_invalid_error">你的密码不如rarcher好(*≧▽≦*)n</string>
-    <string name="username_invalid_error">你的用户名不如rarcher好(′⌒`)</string>
-    <string name="username_empty_error">你用户名没输rarcher啊。。。</string>
-    <string name="password_incorrect_error">你密码没输rarcher啊。。。</string>
-    <string name="username_existed_error">你的用户名rarcher注册过了：）</string>
+    <string name="password_invalid_error">你的密码不如 糖果 好(*≧▽≦*)n</string>
+    <string name="username_invalid_error">你的用户名不如 糖果 好(′⌒`)</string>
+    <string name="username_empty_error">你用户名没输 糖果 啊。。。</string>
+    <string name="password_incorrect_error">你密码没输 糖果 啊。。。</string>
+    <string name="username_existed_error">你的用户名 糖果 注册过了：）</string>
 </resources>
