--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LiYuan</string>
+    <string name="app_name">梨园</string>
     <string name="username">用户名：</string>
     <string name="username_hint">请输入戏票编号</string>
     <string name="password">密码</string>
@@ -20,7 +20,7 @@
     <string name="title_activity_user">user</string>
 
     <!--For Broadcast-->
-    <string name="password_invalid_error">你的密码不如 糖果 好(*≧▽≦*)n</string>
+    <string name="password_invalid_error">你的密码不如 糖果 好(*≧▽≦*)</string>
     <string name="username_invalid_error">你的用户名不如 糖果 好(′⌒`)</string>
     <string name="username_empty_error">你用户名没输 糖果 啊。。。</string>
     <string name="password_incorrect_error">你密码没输 糖果 啊。。。</string>
